<resources>
    <string name="app_name" translatable="false">MoonHome</string>
    <string name="language">English</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="google_place_api" translatable="false">AIzaSyAzOzGF1slqra9mpW20DiTF-hNb-LIjCB4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">MoonHome updates</string>
    <string name="moonface" translatable="false">Moonface</string>
    <string name="moonhome_version_label">MoonHome\'s Version:</string>
    <string name="check_for_update">Check for update</string>
    <string name="contact_us">Contact us</string>
    <string name="whats_new_label">What\'s New?</string>
    <string name="retrieving_data">Retrieving data…</string>
    <string name="credits_and_oss_licenses_label">Credits and OSS licenses</string>
    <string name="made_with_sketchware">Made with Sketchware</string>
    <string name="copyrights_notice">© 2018 Moonface All Rights Reserved</string>
    <string name="updated_notice">MoonHome is up to date</string>
    <string name="event_title_hint">Event title</string>
    <string name="all_day_label">All day</string>
    <string name="starting_time_label">Starting time:</string>
    <string name="ending_time_label">Ending time:</string>
    <string name="location_hint">Location</string>
    <string name="address_hint">Address</string>
    <string name="description_hint">Description</string>
    <string name="add_event_label">Add event</string>
    <string name="cannot_save_event_message">Cannot save event!</string>
    <string name="title_too_short_message">The title is too short!</string>
    <string name="title_too_long_message">The title is too long!</string>
    <string name="location_too_long_message">The location is too long!</string>
    <string name="event_saved_successfully">Event saved successfully!</string>
    <string name="event_deleted_successfully">Event deleted successfully!</string>
    <string name="moonhome_slogan" translatable="false">Any time, Any place, Always simple</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="cannot_load_preview_message">cannot load preview</string>
    <string name="permission_denied_message">Permission denied</string>
    <string name="authorities" translatable="false">"com.moonface.home.fileprovider"</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="subject_hint">Subject</string>
    <string name="content_hint">Content</string>
    <string name="sides_label">sides:</string>
    <string name="roll_button">Roll</string>
    <string name="read_less">READ LESS</string>
    <string name="read_more">READ MORE</string>
    <string name="verified_by_moonguard">Verified by MoonGuard</string>
    <string name="uninstall_button">UNINSTALL</string>
    <string name="open_button">OPEN</string>
    <string name="install_button">INSTALL</string>
    <string name="rate_game">rate game</string>
    <string name="new_game_button">New Game</string>
    <string name="share_message" translatable="false">MoonHome - Any time, Any place, Always simple</string>
    <string name="download_link" translatable="false">https://play.google.com/store/apps/details?id=com.moonface.home</string>
    <string name="share_using_label">Share using</string>
    <string name="load_app_error_message">Cannot find main activity</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_support_speech">Your device doesn\'t support speech input</string>
    <string name="speech_search_label">Search something</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_photo_dialog_title">Profile photo using…</string>
    <string name="sign_in_message">Now sign in</string>
    <string name="message_too_short">Your message is too short!</string>
    <string name="message_too_long">Your message is too long!</string>
    <string name="tic_tac_toe_label">Tic Tac Toe</string>
    <string name="hit_the_monkey_label">Hit The Monkey</string>
    <string name="dice_label">Dice</string>
    <string name="_15_puzzle_label">15 Puzzle</string>
    <string name="search_moongames_hint">Search MoonGames</string>
    <string name="email_dialog_title">Email</string>
    <string name="user_id_dialog_title">User ID</string>
    <string name="nickname_dialog_title">Nickname</string>
    <string name="reset_password_confirmation">Do you want to send a password reset email to\ \</string>
    <string name="reset_password">Password Reset</string>
    <string name="send_button">Send</string>
    <string name="email_sent_message">Email sent</string>
    <string name="email_label">Email</string>
    <string name="user_id_label">User ID</string>
    <string name="nickname_label">Nickname</string>
    <string name="reset_password_label">Reset password</string>
    <string name="sign_out_label">Sign out</string>
    <string name="title_hint">Title</string>
    <string name="send_image_label">Send image</string>
    <string name="send_video_label">Send video</string>
    <string name="shapes_label">Shapes</string>
    <string name="erase_label">Erase</string>
    <string name="brush_width_label">Brush width</string>
    <string name="website_service_name_hint">Website / service name</string>
    <string name="username_email_hint">Username / Email</string>
    <string name="password_hint">Password</string>
    <string name="privacy_policy">Moonface built the MoonHome app as a Free app. This SERVICE is provided by Moonface at no cost and is intended for use as is.
        \n\nThis page is used to inform users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.  If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.
        \n\nThe Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.  The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at MoonHome unless otherwise defined in this Privacy Policy.
        \n\nFor a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.  The app does use third party services that may collect information used to identify you.  We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
        \n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.  This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
        \n\nWe may employ third-party companies and individuals due to the following reasons:  To facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or To assist us in analyzing how our Service is used.
        \n\nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.  We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
        \n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        \n\nThese Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
        \n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
        \n\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="nickname_hint">Nickname</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="already_have_an_account_label">Already have an account?</string>
    <string name="login_fragment_label">Login</string>
    <string name="agree_label">I agree to the</string>
    <string name="settings_item">Settings</string>
    <string name="account_item">Account</string>
    <string name="privacy_policy_item">Privacy policy</string>
    <string name="terms_and_conditions_item">Terms and conditions</string>
    <string name="contact_us_item">Contact us</string>
    <string name="share_item">Share</string>
    <string name="sign_out_item">Sign out</string>
    <string name="about_item">About</string>
    <string name="terms_and_conditions_label">Terms and conditions</string>
    <string name="privacy_policy_label">Privacy policy</string>
</resources>