<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFC107"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
	</android.support.design.widget.AppBarLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="8dp">

				<TextView
					android:id="@+id/textview2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/from_label"
					android:textColor="#000000"
					android:textSize="16sp" />

				<EditText
					android:id="@+id/from"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:enabled="false"
					android:focusable="false"
					android:inputType="textEmailAddress"
					android:padding="8dp"
					android:singleLine="true"
					android:textColor="#000000"
					android:textSize="16sp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_weight="1"
				android:background="#EEEEEE" />

			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="8dp">

				<TextView
					android:id="@+id/textview3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/to_label"
					android:textColor="#000000"
					android:textSize="16sp" />

				<AutoCompleteTextView
					android:id="@+id/edittext1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:inputType="textEmailAddress"
					android:padding="8dp"
					android:singleLine="true"
					android:textColor="#000000"
					android:textColorHint="#607D8B"
					android:textSize="16sp" />
			</LinearLayout>

            <ListView
                android:id="@+id/listview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_weight="1"
				android:background="#EEEEEE" />

			<LinearLayout
				android:id="@+id/linear5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="8dp">

				<EditText
					android:id="@+id/subject"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@android:color/transparent"
					android:hint="@string/subject_hint"
					android:inputType="textEmailSubject"
					android:padding="8dp"
					android:singleLine="false"
					android:textColor="#000000"
					android:textColorHint="#607D8B"
					android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_weight="1"
				android:background="#EEEEEE" />
		</LinearLayout>

        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="8dp">

			<EditText
				android:id="@+id/compose"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="start|top"
				android:hint="@string/content_hint"
				android:padding="8dp"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="16sp" />
        </LinearLayout>
	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
