<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">
		<android.support.v7.widget.Toolbar
			android:id="@+id/_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>
	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<ScrollView
			android:id="@+id/vscroll1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#FFFFFF">

			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#FFFFFF"
				android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

					<TextView
						android:id="@+id/profile_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:text=""
						android:textSize="24sp" />
                </LinearLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="?android:attr/listDivider" />

				<LinearLayout
					android:id="@+id/linear_email"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:background="?android:selectableItemBackground"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="5dp"
					android:paddingTop="5dp">

					<ImageView
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:padding="4dp"
						android:scaleType="fitXY"
						android:src="@drawable/ic_quick_contacts_mail_grey" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center_vertical"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/email_label"
							android:textColor="#000000"
							android:textSize="16sp" />

						<TextView
							android:id="@+id/email"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=""
							android:textColor="#757575"
							android:textSize="14sp" />
					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/linear_id"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:background="?android:selectableItemBackground"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="5dp"
					android:paddingTop="5dp">

					<ImageView
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:padding="4dp"
						android:scaleType="fitXY"
						android:src="@drawable/ic_menu_grey" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center_vertical"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/user_id_label"
							android:textColor="#000000"
							android:textSize="16sp" />

						<TextView
							android:id="@+id/id"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=""
							android:textColor="#757575"
							android:textSize="14sp" />
					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/linear_nickname"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:background="?android:selectableItemBackground"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="5dp"
					android:paddingTop="5dp">

					<ImageView
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:padding="4dp"
						android:scaleType="fitXY"
						android:src="@drawable/ic_account_circle_grey" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center_vertical"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/nickname_label"
							android:textColor="#000000"
							android:textSize="16sp" />

						<TextView
							android:id="@+id/nickname"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=""
							android:textColor="#757575"
							android:textSize="14sp" />
					</LinearLayout>

				</LinearLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_weight="1"
					android:background="?android:attr/listDivider" />

				<LinearLayout
					android:id="@+id/linear_reset_password"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:background="?android:selectableItemBackground"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="5dp"
					android:paddingTop="5dp">

					<ImageView
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:padding="4dp"
						android:scaleType="fitXY"
						android:src="@drawable/ic_lock_grey_24dp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center_vertical"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/reset_password_label"
							android:textColor="#000000"
							android:textSize="16sp" />
					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/linear_signout"
					android:layout_width="match_parent"
					android:layout_height="60dp"
					android:background="?android:selectableItemBackground"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingBottom="5dp"
					android:paddingTop="5dp">

					<ImageView
						android:id="@+id/btnCapture"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:padding="4dp"
						android:scaleType="fitXY"
						android:src="@drawable/ic_exit_to_app_grey" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center_vertical"
						android:orientation="vertical">

						<TextView
							android:id="@+id/textview4"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/sign_out_label"
							android:textColor="#000000"
							android:textSize="16sp" />
					</LinearLayout>

				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
